<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/addGoalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=" Add Goal "
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddGoalConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_circle_corner"
        android:backgroundTint="#00688B"
        android:text="confirm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAddGoalBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_dark_circle"
        android:text="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextGoalTitle"
        android:layout_width="252dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_dark_circle"
        android:ems="10"
        android:hint="Input the goal name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="Goal Title:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addGoalLabel" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="Goal Score:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGoalTitle" />

    <EditText
        android:id="@+id/editTextAddGoalScore"
        android:layout_width="252dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_dark_circle"
        android:ems="10"
        android:hint="Input the score of goal"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Comment:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddGoalScore" />

    <EditText
        android:id="@+id/editTextAddGoalComment"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_dark_circle"
        android:ems="10"
        android:hint="Add comment for goal"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textViewAddGoalWarn"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="    "
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddGoalConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextAddGoalComment"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddGoalComment"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>